--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -20,8 +20,8 @@
                {{getCount(basket.items)}}
             </div>
         </a>
-          <a href="" class="btn btn-outline-secondary me-2">login</a>
-          <a href="" class="btn btn-outline-secondary me-3">signup</a>
+          <a routerLink="/account/login" class="btn btn-outline-secondary me-2">login</a>
+          <a routerLink="/account/register"  class="btn btn-outline-secondary me-3">signup</a>
       </div>
     
 
